stacks/media/qbittorrent/qbittorrent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  # namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
      # targetPort: 80
  selector:
    app: qbittorrent
  type: ClusterIP
