stacks/media/qbittorrent/qbittorrent-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: default
spec:
  entryPoints:
  - websecure
  # - web
  routes:
  - match: Host(`qbittorrent.localhost`)
    kind: Rule
    middlewares:
    - name: headers-default
    services:
    - name: qbittorrent
      namespace: default
      port: 8080
